# gitgit

./: .gitignore  Cargo.toml  README.md  gitgit.example.toml  install.sh
.github/workflows/: ci.yml  release.yml
qa/: Containerfile  README.md  qactl.sh  scenarios.md
qa/scripts/: entrypoint.sh  qa.sh
src/: config.rs  diff.rs  graph_engine.rs  highlight.rs  lib.rs  loader.rs  main.rs  message.rs  model.rs  snapshot.rs  store.rs  textdiff.rs  theme.rs  tokenize.rs  view_state.rs
src/backend/: build.rs  fixtures.rs  git.rs  mod.rs
src/ui/: detail_panel.rs  dialog.rs  diff_view.rs  dropdown.rs  files_panel.rs  files_toolbar.rs  graph.rs  hint_bar.rs  layout.rs  log_panel.rs  menu_bar.rs  mod.rs  revert_modal.rs  search_history.rs  toolbar.rs  widgets.rs
tests/: features.rs  layering.rs  loader.rs  seams.rs
